--- a/templates/group.html
+++ b/templates/group.html
@@ -1,3 +1,9 @@
+{% comment %}
+Не нашел как через Практикум писать вам комментарии, попробую так.
+Пытаюсь сделать через шаблонизатор, pytest ругается:
+AssertionError: Отредактируйте HTML-шаблон, не найдено название страницы `<title>Записи сообщества {{ название_группы }} | Yatube</title>`
+Создал group_new.html чтобы показать как пытаюсь сделать с использованием шаблонизатора.
+{% endcomment %}
 <!doctype html>
 <html>
   <head>
