--- a/templates/group.html
+++ b/templates/group.html
@@ -1,8 +1,7 @@
 {% comment %}
-Не нашел как через Практикум писать вам комментарии, попробую так.
-Пытаюсь сделать через шаблонизатор, pytest ругается:
+В слаке вас не смог найти.
+Все исправил в group_new. Проверяю напрямую на сайте, все отлично выглядит. Но pytest продолжает вылетать с ошибкой:
 AssertionError: Отредактируйте HTML-шаблон, не найдено название страницы `<title>Записи сообщества {{ название_группы }} | Yatube</title>`
-Создал group_new.html чтобы показать как пытаюсь сделать с использованием шаблонизатора.
 {% endcomment %}
 <!doctype html>
 <html>
