--- a/templates/group_new.html
+++ b/templates/group_new.html
@@ -1,14 +1,13 @@
 {% extends "base.html" %}
-{% block title %}Записи сообщества {{ group }} | Yatube{% endblock %}
-{% block header %}Записи сообщества {{ group }} | Yatube{% endblock %}
+{% block title %}Записи сообщества {{ group.title }} | Yatube{% endblock %}
+{% block header %}
+    <h1>{{ group.title }}</h1>
+    <p>
+        {{group.description}}
+    </p>{% endblock %}
 {% block content %}
 
     {% for post in posts %}
-    <h1>{{ group }}</h1>
-    <p>
-      {{ group.description }}
-    </p>
-
     <h3>
         Автор: {{ post.author.get_full_name }}, дата публикации: {{ post.pub_date|date:"d M Y" }}
     </h3>
